--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary" id="principio">
-    <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
+    <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_.png"
         alt="img"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
@@ -102,7 +102,7 @@
 
 
   <!---------------------------- LINK JS ---------------------------->
-  <script src="./js/amazing_events.js"></script>
+  <script src="./js/data.js"></script>
 
   <script src="./js/filtrado_tarjetas.js"></script>
 
