--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
 <header>
     <nav class="navbar bg-body-tertiary">
-        <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
+        <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_.png"
                 alt="img"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
             <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
