--- a/details.html
+++ b/details.html
@@ -19,7 +19,7 @@
 <header>
     <!---------------------------- NVBAR ---------------------------->
     <nav class="navbar bg-body-tertiary" id="principio">
-        <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_.png"
+        <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
                 alt="img"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
             <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
@@ -100,7 +100,7 @@
     <!---------------------------- LINK JS ---------------------------->
  
  
-    <script src="./js/.js"></script>
+    <script src="./js/data.js"></script>
     <script src="./js/details.js"></script>
   
     <!-- <script src="./js/main.js"></script>
