--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary" id="principio">
-    <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_.png"
+    <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
         alt="img"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
