--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -18,7 +18,7 @@
 <header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary">
-    <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_.png"
+    <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
         alt="img"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
