CREO QUE ME SALIO TODO

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 
 
   <!---------------------------- LINK JS ---------------------------->
-  <script src="./js/data.js"></script>
+  <!-- <script src="./js/data.js"></script> -->
 
-  <script src="./js/filtrado_tarjetas.js"></script>
-
+  <script src="./js/filtrado_tarjetas.js"></script> 
+  
   <script src="./js/boton_arriba.js"></script>
 
 </body>
