--- a/past_events.html
+++ b/past_events.html
@@ -100,7 +100,7 @@
     crossorigin="anonymous"></script>
 
   <!---------------------------- LINK JS ---------------------------->
-  <script src="./js/data.js"></script>
+  <!-- <script src="./js/data.js"></script> -->
 
   <script src="./js/past_events.js"></script>
 
