--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -102,7 +102,7 @@
 
 
   <!---------------------------- LINK JS ---------------------------->
-  <script src="./js/data.js"></script>
+  <!-- <script src="./js/data.js"></script> -->
   
   <script src="./js/upcoming_events.js"></script>
   
