--- a/stats.html
+++ b/stats.html
@@ -65,8 +65,8 @@
         <section class="container-stats">
             <table class="stats-table" id="firstTable">
                 <thead>
-                    <tr>
-                        <th colspan="3">
+                    <tr >
+                        <th colspan="3" id="th-titulo">
                             Events statistics
                         </th>
                     </tr>
@@ -87,7 +87,7 @@
 
             <table class="stats-table" id="secondTable">
                 <thead>
-                    <tr>
+                    <tr class="titulo-cuadro">
                         <th colspan="3">
                             Upcoming events statistics by category
                         </th>
